--- a/examples/python-web-app/devops/demo/templates/demo_site.html
+++ b/examples/python-web-app/devops/demo/templates/demo_site.html
@@ -73,15 +73,15 @@ footer {
 
 
 <header>
-  <h2>Free DevOps Course By Abhishek</h2>
+  <h2>Free DevOps Course By vishal</h2>
 </header>
 
 <section>
   <nav>
     <ul>
-      <li><a href="www.youtube.com/@AbhishekVeeramalla">YouTube</a></li>
-      <li><a href="www.linkedin.com/in/abhishek-veeramalla-77b33996/">LinkedIn</a></li>
-      <li><a href="https://telegram.me/abhishekveeramalla">Telegram</a></li>
+      <li><a href="www.youtube.com/">YouTube</a></li>
+      <li><a href="www.linkedin.com/in/">LinkedIn</a></li>
+      <li><a href="https://telegram.me/">Telegram</a></li>
     </ul>
   </nav>
   
